--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                                 <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>                             
                            <!-- </ul>
                             <ul class="col-6 links">-->
-                                
+                               <!-- 
                                 <li id="PlacesToTravelColTwo"><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Грузия</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a></li>
@@ -611,7 +611,7 @@
                                 <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a></li>-->
                             </ul>
                         </div>
                     </div>
