--- a/blog-page.html
+++ b/blog-page.html
@@ -310,36 +310,23 @@
 
                         <div class="row">
 
-                            <ul class="col-6 links">
-
-                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll"  style="font-weight: 400;">Турция</a></li>
-
-                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll"  style="font-weight: 400;">Пиво</a></li>
-
-                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll"  style="font-weight: 400;">Одесса</a>
-
-                                </li>
-
-                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll"  style="font-weight: 400;">Карпаты</a>
-
-                                </li>
-
+                          <ul class="col links">
+                                <!-- Места для путешествий-->
+                                <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы Харькова</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html" class="scroll">Яворовская Ниагара</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-gold-mines.html" class="scroll">Золотые Прииски Закарпатья</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html" class="scroll">Львов На Выходные</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-zoo.html" class="scroll">Зоопарк Пылышенко</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Тайны и загадки Хортицы</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Натуральное Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-cheese-farm.html" class="scroll">Сырная Ферма И Пасека</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-wine.html" class="scroll">Экскурсия на Винный завод</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Походы По Турции</a></li>                            
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Походы в Карпаты</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Походы По Грузии</a></li>
                             </ul>
-
-                            <ul class="col-6 links">
-
-                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
-
-                                        class="scroll"  style="font-weight: 400;">Лимонарий</a></li>
-
-                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll"  style="font-weight: 400;">ЛОЛ</a></li>
-
-                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll"  style="font-weight: 400;">Хортица</a>
-
-                                </li>
-
-                            </ul>
-
                         </div>
 
                     </div>
