--- a/page-wine.html
+++ b/page-wine.html
@@ -309,20 +309,22 @@
                             <h3>Места для путешествий</h3>
                         </div>
                         <div class="row">
-                            <ul class="col-6 links">
-                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a>
-                                </li>
-                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
-                                </li>
-                            </ul>
-                            <ul class="col-6 links">
-                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
-                                        class="scroll">Лимонарий</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
-                                </li>
+                            <ul class="col links">
+                                <!-- Места для путешествий-->
+                                <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы Харькова</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html" class="scroll">Яворовская Ниагара</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-gold-mines.html" class="scroll">Золотые Прииски Закарпатья</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html" class="scroll">Львов На Выходные</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-zoo.html" class="scroll">Зоопарк Пылышенко</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Тайны и загадки Хортицы</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Натуральное Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-cheese-farm.html" class="scroll">Сырная Ферма И Пасека</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-wine.html" class="scroll">Экскурсия на Винный завод</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Походы По Турции</a></li>                            
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Походы в Карпаты</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Походы По Грузии</a></li>
                             </ul>
                         </div>
                     </div>
