--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -81,7 +81,7 @@
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                      <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                     <li class="breadcrumb-item active" aria-current="page">Сырная ферма и Пасека</li>
+                     <li class="breadcrumb-item active" aria-current="page">Фестиваль Воздушных Шаров</li>
                    </ol>
                 </nav>
                </div>
