--- a/booking.html
+++ b/booking.html
@@ -219,6 +219,7 @@
                             <ul class="col links">
                                 <!-- Места для путешествий-->
                                 <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Askania-Nova.html" class="scroll">Аскания Нова</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы Харькова</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html" class="scroll">Яворовская Ниагара</a></li>
