--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -319,59 +319,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                     
+                        </div>             
                         <!-- //Описание экскурсии -->
-                      
-                      <!-- Карусель --><!--
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-1.jpg" data-src="holder.js/900x400?theme=social" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-4.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-5.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-6.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-7.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-8.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
--->
-<!-- //Карусель -->
 
                         <div class="alert alert-success">
                             <h5 class="alert-heading">В стоимость входит:</h5>
@@ -511,6 +460,7 @@
                            <ul class="col links">
                                 <!-- Места для путешествий-->
                                 <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Askania-Nova.html" class="scroll">Аскания Нова</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы Харькова</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html" class="scroll">Яворовская Ниагара</a></li>
