--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -90,14 +90,14 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Аскания-Нова</li>
+                            <li class="breadcrumb-item active" aria-current="page">Розовое Oзеро</li>
                         </ol>
                     </nav>
                 </div>
                 <!-- //Хлебные крошки -->
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Аскания-Нова</h3>
+                    <h3 class="title">Розовое Oзеро</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="./images/Askania-Nova-max.jpg" alt="news image" class="img-fluid">
@@ -106,8 +106,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">19 - 20
-                                        Июня
-                                        2021 Года</span>
+                                        Июня 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
@@ -460,8 +459,8 @@
                                 <!-- Места для путешествий-->
                                 <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-balloon-festival.html"
                                         class="scroll">Фестиваль Воздушных Шаров</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Askania-Nova.html" 
-                                       class="scroll">Аскания Нова</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Pink-Lake.html" 
+                                       class="scroll">Розовое Oзеро</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html"
                                         class="scroll">Запорожье На Днепре</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы
