--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Туры выходного дня 'Новый поворот', Аскания-Нова ">
 
     <!-- Open Graph data-->
-    <meta property="og:title" content="Аскания-Нова">
+    <meta property="og:title" content="Розовое Озеро">
     <meta property="og:description"
         content=" Аскания-Нова, релакс на море, дегустация вин на розовом озере. Арабатские термы!" />
     <meta property="og:type" content="website" />
@@ -15,7 +15,7 @@
     <meta property="og:image" content="./images/Askania-Nova-max.jpg">
     <!--End Open Graph data-->
 
-    <title>Аскания-Нова | Новый Поворот</title>
+    <title>Розовое Озеро | Новый Поворот</title>
 
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
 
