--- a/packages.html
+++ b/packages.html
@@ -306,7 +306,7 @@
                             Экскурсия и дегустация в частной пивоварне
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>15 Мая</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>12 Июня</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -330,7 +330,7 @@
                             Самая вкусная экскурсия
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>19 Мая</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
