--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -100,7 +100,7 @@
                     <h3 class="title">Розовое Oзеро</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="./images/Askania-Nova-max.jpg" alt="news image" class="img-fluid">
+                    <img src="./images/Pink-Lake-img.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
