--- a/packages.html
+++ b/packages.html
@@ -194,7 +194,7 @@
                 <!--  //Яворовская Ниагара -->
 
                 <!--  Золотые прииски   -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+                <!--<div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-gold-mines.html">
                             <img src="images/golds-mines-min.jpg" alt="Золотые прииски" class="img-fluid" />
@@ -214,7 +214,7 @@
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <!--  //Золотые прииски -->
 
                 <!--  Львов   -->
