--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -37,24 +37,6 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
-	<!-- Facebook Pixel Code -->
-	<!--<script>
-	!function(f,b,e,v,n,t,s)
-	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-	n.queue=[];t=b.createElement(e);t.async=!0;
-	t.src=v;s=b.getElementsByTagName(e)[0];
-	s.parentNode.insertBefore(t,s)}(window, document,'script',
-	'https://connect.facebook.net/en_US/fbevents.js');
-	fbq('init', '3921253151274858');
-	fbq('track', 'PageView');
-	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-	/></noscript>-->
-	<!-- End Facebook Pixel Code -->
-
 </head>
 
 <body>
@@ -139,6 +121,31 @@
 	    </div>
 	    <!--  //TikTok-->
 
+	<!--  Золотые прииски   -->
+	<div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+	    <div class="image-tour position-relative">
+		<a href="https://novipovorot.pp.ua/page-gold-mines.html">
+		    <img src="images/golds-mines-min.jpg" alt="Золотые прииски" class="img-fluid" />
+		</a>
+		<!--<p><span class="fa fa-tags"></span> <span>2700грн.</span></p>-->
+	    </div>
+	    <div class="package-info">
+		<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		<h5 class="my-2">
+		    <a href="https://novipovorot.pp.ua/page-gold-mines.html">
+			Золотые прииски Закарпатья
+		    </a>
+		</h5>
+		<p class="">Экскурсия в Закарпатье с Новым поворотом </p>
+		<ul class="listing mt-3">
+		    <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано </span></li>
+		    <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
+		</ul>
+	    </div>
+	</div>
+	<!--  //Золотые прииски -->
+    
+		    
 	    <!--  8 марта  -->
 	    <div class="col-lg-3 col-sm-6 mb-5">
 		<div class="image-tour position-relative">
