--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -85,6 +85,7 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
+                            <li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>
                             <li class="breadcrumb-item active" aria-current="page"> Золотые прииски Закарпатья </li>
                         </ol>
                     </nav>
