--- a/packages.html
+++ b/packages.html
@@ -193,29 +193,29 @@
                 </div>
                 <!--  //Яворовская Ниагара -->
 
-                <!--  Золотые прииски   -->
-                <!--<div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+                <!--  Розовое озеро   -->
+                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-gold-mines.html">
-                            <img src="images/golds-mines-min.jpg" alt="Золотые прииски" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
+                            <img src="images/Pink-Lake-head.jpg" alt="Розовое озеро" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>2700грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>1650грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл., Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-gold-mines.html">
-                                Золотые прииски Закарпатья
+                            <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
+                                Розовое озеро
                             </a>
                         </h5>
-                        <p class="">Экскурсия в Закарпатье с Новым поворотом </p>
+                        <p class="">Дегустация вин на розовом озере </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 8-10 Мая </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 19 - 20 Июня </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
-                </div>-->
-                <!--  //Золотые прииски -->
+                </div>
+                <!--  //Розовое озеро -->
 
                 <!--  Львов   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
