--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -95,7 +95,7 @@
                     <h3 class="title">Сырная ферма и Пасека</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/cheese-farm-max.jpg" alt="news image" class="img-fluid">
+                    <img src="images/Cheese-Farm/inside-cheese-farm.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
