--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -100,7 +100,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>12 Июня</span>
                                 </li>
                             </ul>
                         </div>
