--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -149,7 +149,7 @@
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
-                                С <strong>8 июня </strong><u>430 грн.</u> взрослые, 410 грн. дети.
+                                С <strong>8 июня </strong><u>430 грн.</u> - взрослые, 410 грн. - дети.
                             </span>
                         </div>
                         
