--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -142,7 +142,9 @@
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
-                            <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br />
+                            <span  class="fa fa-info-circle"></span><strong> Информируем</strong>
+                            <br />
+                            <br />
                             <span class="txt-alg-jf">
                                 Цена билета ДО <strong>7 июня* :</strong><u>400 грн.</u> - от 6 до 200 лет, <u>390 грн.</u> 5 - 10 лет, до 
                                 4х бесплатно (без предоставления отдельного места в транспорте). 
