--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -159,7 +159,7 @@
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
-                                С <strong>8 июня </strong><u>430 грн.</u> - взрослые, 410 грн. - дети.
+                                С <strong>8 июня </strong><u>430 грн.</u> - взрослые, <u>410 грн.</u> - дети.
                             </span>
                         </div>
                         <!-- //Alert info -->
