--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -251,7 +251,7 @@
                                             фермы мы видели лишь в Закарпатском Хусте. Но эта еще интереснее! Ведь в
                                             этом месте рождаются шедевры сыроварения!<br>
                                             <u>Мы попробуем 7 сыров</u> <img src="./images/Cheese-Farm/cheese.svg"
-                                                alt="cheese">:<br>
+                                                alt="сыр">:<br>
                                             - Свитанок и Адыгейский (коз);<br>
                                             - Шевер козий (творожный сыр в травах);<br>
                                             - Качота;<br>
