--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -355,7 +355,8 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                  Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; 
+                                  Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; <br>
+                                  (от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     экскурсия по Сырной ферме;
@@ -367,13 +368,13 @@
                                     экскурсия по Пасеке;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    дегустация 2 вида меда и забрус;
+                                    дегустация 4 вида меда;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     сопровождение представителя нашей компании;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    магнит от Нового поворота.
+                                    магнит от Нового поворота, самое замечательное настроение.
                                 </li>
                             </ul>
                         </div>
@@ -381,12 +382,9 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Индивидуальная покупка меда  130 грн/л, 3л -380 грн;
+                                    Индивидуальная покупка сыра от 45 до 60 грн /100 г от вида и йогурта.
                                 </li>
-                                <li class="list-group-item list-group-item-danger ">
-                                    индивидуальная покупка сыра от 45 до 60 грн /100 г от вида и йогурта. 
-                                </li>
-                                <ul>
+                            </ul>
                         </div>
                      <hr>
                <p>
