--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -236,7 +236,7 @@
                                     <div class="card-body txt-alg-jf">
                                         <p><strong>10:00 </strong>
                                             Выезд с центра Запорожья после минутки позитива.
-                                            Фестивальная- Металлургов - Каховская заберем Вас в этих 3х местах где
+                                            Фестивальная - Металлургов - Каховская заберем Вас в этих 3-х местах где
                                             удобно, о месте посадки пишите при бронировании.
                                         </p>
                                         <p><strong>10:50 - 11:50 </strong>
