--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -424,6 +424,13 @@
                                 </div>
                               </div>
 
+                             <div class="card">
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Сырная ферма и Пасека #21" data-fancybox="gallery"
+                                    href="/images/Cheese-Farm/cheese-farm-2.jpg">
+                                    <img src="/images/Cheese-Farm/cheese-farm-2.jpg"></a>
+                                </div>
+                              </div>
+                                
                             </div>
                           </main>
                            <br>
