--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -478,7 +478,7 @@
                     <!-- owl-carousel -->
                <div class="owl-carousel owl-theme" style="margin: 0 auto; padding-bottom: 30px;">
                   <div>
-                    <img src="/images/Beer/beer-1.jpg" alt="beer" class="img-fluid abt-image" />
+                    <img src="/images/Cheese-Farm/feedback-cheese-farm-1.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
                   <div>
                     <img src=" /images/Beer/beer-2.jpg " alt="beer" class="img-fluid abt-image" />
