--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -481,42 +481,33 @@
                     <img src="/images/Cheese-Farm/feedback-cheese-farm-1.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src=" /images/Beer/beer-2.jpg " alt="beer" class="img-fluid abt-image" />
+                     <img src="/images/Cheese-Farm/feedback-cheese-farm-2.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Beer/beer-3.jpg" alt="beer" class="img-fluid abt-image" />
+                     <img src="/images/Cheese-Farm/feedback-cheese-farm-3.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Beer/beer-4.jpg" alt="beer" class="img-fluid abt-image" />
+                     <img src="/images/Cheese-Farm/feedback-cheese-farm-4.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
                  <div>
-                    <img src="/images/Beer/beer-5.jpg" alt="beer" class="img-fluid abt-image" />
+                     <img src="/images/Cheese-Farm/feedback-cheese-farm-5.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Beer/beer-6.jpg" alt="beer" class="img-fluid abt-image" />
+                     <img src="/images/Cheese-Farm/feedback-cheese-farm-6.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/Beer/beer-7.jpg" alt="beer" class="img-fluid abt-image" />
+                     <img src="/images/Cheese-Farm/feedback-cheese-farm-7.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
-		          <div>
-                    <img src="/images/Beer/beer-8.jpg" alt="beer" class="img-fluid abt-image" />
+		  <div>
+                     <img src="/images/Cheese-Farm/feedback-cheese-farm-8.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
-		          <div>
-                    <img src="/images/Beer/beer-9.jpg" alt="beer" class="img-fluid abt-image" />
-                  </div>
-		          <div>
-                    <img src="/images/Beer/beer-10.jpg" alt="beer" class="img-fluid abt-image" />
-                  </div>
-                  <div>
-                    <img src="/images/Beer/beer-11.jpg" alt="beer" class="img-fluid abt-image" />
-                  </div>
-                  <div>
-                    <img src="/images/Beer/beer-12.jpg" alt="beer" class="img-fluid abt-image" />
+		  <div>
+                     <img src="/images/Cheese-Farm/feedback-cheese-farm-9.jpg" alt="cheese-farm" class="img-fluid abt-image" />
                   </div>
                </div>
                <!-- //owl-carousel -->
                     
-                     <hr>
+                  <hr>
                <p>
                 Тексты подсказок:
                </p>
