--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -128,13 +128,13 @@
                             Вы такого <span id="tourism">туризма</span> еще не видели и не пробовали! 
                             Сыры с Запорожской душой и поразительными вкусами от любителя до гурмана!
 		            <span id="travels"> Путешествие</span> в котором мы увидим милых козочек, узнаем секреты изготовления твердых и мягких сыров, 
-                            а еще попробуем свежее козье молочко и вкуснейший йогурт. 
+                            <span id="cheeseTasting">а еще на дегустации мы попробуем настоящий сыр, свежее козье молочко и вкуснейший йогурт.</span> 
                         </p>
                         <p class="txt-alg-jf">
 		             Бывали у настоящих пчеловодов <span id="honeyExcursion">на медовой экскурсии</span>?!
                              Мы побываем в роли настоящего пасечника примерив
-                             на себя защитный костюм, попробуем вкуснейший
-                             сотовый мед и узнаем истории  пасеки и пчелок!
+                             на себя защитный костюм, <span id="honeyTasting">а на дегустации попробуем вкуснейший
+				сотовый мед</span> и узнаем истории  пасеки и пчелок!
                          </p>
                          <div id="MoreDetails" style="display: none;">
                          <p class="p-2 bg-warning text-white txt-alg-jf">
@@ -543,12 +543,12 @@
                                 class="text-white" title="Медовая экскурсия" href="#honeyExcursion" rel="tag">Медовая экскурсия
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('WalkWithTwist')"
-                                class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist" rel="tag">Дегустация сыра
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('cheeseTasting')"
+                                class="text-white" title="Дегустация сыра" href="#cheeseTasting" rel="tag">Дегустация сыра
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('WalkWithTwist')"
-                                class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist" rel="tag">Дегустация меда
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyTasting')"
+                                class="text-white" title="Дегустация меда" href="#honeyTasting" rel="tag">Дегустация меда
 			</a></span>
 
                     </div>
