--- a/packages.html
+++ b/packages.html
@@ -97,6 +97,54 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
 
+                <!-- Сырная ферма и Пасека -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
+                            <img src="images/Cheese-Farm/home-of-the-cheese-farm.jpg" alt="Cheese-farm" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>390грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-cheese-farm.html">Сырная ферма и Пасека</a>
+                        </h5>
+                        <p class="">
+                            Самая вкусная экскурсия
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- //Сырная ферма и Пасека -->
+                
+                <!--  Розовое озеро   -->
+                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
+                            <img src="images/Pink-Lake-head.jpg" alt="Розовое озеро" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>1650грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл., Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
+                                Розовое озеро
+                            </a>
+                        </h5>
+                        <p class="">Дегустация вин на розовом озере </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 19 - 20 Июня </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Розовое озеро -->
+                
                 <!-- Фестиваль воздушных шаров  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
@@ -193,30 +241,6 @@
                 </div>
                 <!--  //Яворовская Ниагара -->
 
-                <!--  Розовое озеро   -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
-                            <img src="images/Pink-Lake-head.jpg" alt="Розовое озеро" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>1650грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл., Украина.</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
-                                Розовое озеро
-                            </a>
-                        </h5>
-                        <p class="">Дегустация вин на розовом озере </p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 19 - 20 Июня </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--  //Розовое озеро -->
-
                 <!--  Львов   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
@@ -312,30 +336,6 @@
                     </div>
                 </div>
                 <!--  //Пиво -->
-
-                <!-- Сырная ферма и Пасека -->
-                <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
-                            <img src="images/cheese-farm-min.jpg" alt="Cheese-farm" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>390грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-cheese-farm.html">Сырная ферма и Пасека</a>
-                        </h5>
-                        <p class="">
-                            Самая вкусная экскурсия
-                        </p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- //Сырная ферма и Пасека -->
 
                 <!--  Вино -->
                 <div class="col-lg-3 col-sm-6 mb-5">
