--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
-                            <img src="images/cheese-farm-min.jpg" alt="Cheese-farm" class="img-fluid" />
+                            <img src="images/Cheese-Farm/home-of-the-cheese-farm.jpg" alt="Cheese-farm" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>390грн.</span></p>
                     </div>
