--- a/packages.html
+++ b/packages.html
@@ -103,7 +103,7 @@
                         <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
                             <img src="images/Cheese-Farm/home-of-the-cheese-farm.jpg" alt="Cheese-farm" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>390грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>430грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
@@ -114,7 +114,7 @@
                             Самая вкусная экскурсия
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>12 Июня</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
