--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -121,7 +121,8 @@
                         </h4>
                         
                        <p class="txt-alg-jf">
-                           ВЫ 100% ЕЩЕ ТУТ НЕ БЫЛИ ;) <span id="ExcursionToZaporozhye">Экскурсия в Запорожье.</span>
+                           ВЫ 100% ЕЩЕ ТУТ НЕ БЫЛИ <img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">
+			       <span id="ExcursionToZaporozhye">Экскурсия в Запорожье.</span>
                         </p>
                         <p class="txt-alg-jf">
                             Удивительные нубийские козы, миниатрные коровы, самые вкусные сыры <span id="Zaporozhye">Запорожья и области!</span>
