--- a/packages.html
+++ b/packages.html
@@ -568,7 +568,7 @@
                     <h4 class="destination mb-3"> Ферма</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
-                            <img src="images/cheese-farm-max.jpg" class="img-fluid" alt=" Сырная ферма и Пасека ">
+                            <img src="images/Cheese-Farm/pop-cheese-farm.jpg" class="img-fluid" alt=" Сырная ферма и Пасека ">
                         </a>
                         <div class="rating">
                             <ul>
