--- a/index.html
+++ b/index.html
@@ -286,56 +286,7 @@
                 Туры выходного дня "Новый Поворот"
             </p>
             <div class="row">
-
-                <!-- Фестиваль воздушных шаров  -->
-                <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
-                            <img src="images/Baloon-fast/balloon-festival-min.jpg" alt="baloon-fast"
-                                class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>2600грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span> Украина.</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
-                                Фестиваль Воздушных Шаров
-                            </a>
-                        </h5>
-                        <p class="">
-                            Умань, Каменец Подольский...
-                        </p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 22-23 Мая 2021 Года </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--  //Фестиваль воздушных шаров -->
-
-                <!--  Зоопарк Пылышенко -->
-                <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-zoo.html">
-                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>335грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-zoo.html">Экскурсия</a>
-                        </h5>
-                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>16 Мая</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--  //Зоопарк Пылышенко -->
-
+                
                 <!--  Пиво -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
@@ -385,6 +336,52 @@
                     </div>
                 </div>
                 <!-- //Сырная ферма и Пасека -->
+                
+                <!--  Розовое озеро   -->
+                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
+                            <img src="images/Pink-Lake-head.jpg" alt="Розовое озеро" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>1650грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл., Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
+                                Розовое озеро
+                            </a>
+                        </h5>
+                        <p class="">Дегустация вин на розовом озере </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 19 - 20 Июня </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Розовое озеро -->
+
+                <!--  Зоопарк Пылышенко -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>335грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-zoo.html">Экскурсия</a>
+                        </h5>
+                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>12 Июня</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Зоопарк Пылышенко -->
 
             </div>
             <div class="view-package text-center mt-4">
