--- a/page-wine.html
+++ b/page-wine.html
@@ -206,27 +206,31 @@
                          <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание экскурсий: </li>
                             <li class="list-group-item">
-                               <span class="fa fa-calendar mr-2"></span> 20 Марта 2021 </li>
+                               <span class="fa fa-calendar mr-2"></span> 05 Июня 2021 </li>
                             <li class="list-group-item">
-                               <span class="fa fa-calendar mr-2"></span> 27 Марта 2021 </li>
+                               <span class="fa fa-calendar mr-2"></span> 12 Июня 2021 </li>
                             <li class="list-group-item">  <span
-                                    class="fa fa-calendar mr-2"></span> 03 Апреля 2021 </li>
+                                    class="fa fa-calendar mr-2"></span> 19 Июня 2021 </li>
                             <li class="list-group-item">  <span
-                                    class="fa fa-calendar mr-2"></span> 10 Апреля 2021</li>
+                                    class="fa fa-calendar mr-2"></span> 26 Июня 2021</li>
                             <li class="list-group-item"> <span
-                                    class="fa fa-calendar mr-2"></span> 17 Апреля 2021 </li>
+                                    class="fa fa-calendar mr-2"></span> 03 Июля 2021 </li>
                             <li class="list-group-item"> <span
-                                    class="fa fa-calendar mr-2"></span> 24 Апреля 2021 </li>
+                                    class="fa fa-calendar mr-2"></span> 10 Июля 2021 </li>
                             <li class="list-group-item"> <span
-                                    class="fa fa-calendar mr-2"></span> 01 Мая 2021 </li>
+                                    class="fa fa-calendar mr-2"></span> 17 Июля 2021 </li>
                             <li class="list-group-item"> <span
-                                    class="fa fa-calendar mr-2"></span> 08 Мая 2021 </li>
+                                    class="fa fa-calendar mr-2"></span> 24 Июля 2021 </li>
                            <li class="list-group-item"> <span
-                                    class="fa fa-calendar mr-2"></span> 15 Мая 2021 </li>
+                                    class="fa fa-calendar mr-2"></span> 31 Июля 2021 </li>
                            <li class="list-group-item"> <span
-                                    class="fa fa-calendar mr-2"></span> 22 Мая 2021 </li>
+                                    class="fa fa-calendar mr-2"></span> 07 Августа 2021 </li>
                            <li class="list-group-item"> <span
-                                    class="fa fa-calendar mr-2"></span> 29 Мая 2021 </li>
+                                    class="fa fa-calendar mr-2"></span> 14 Августа 2021 </li>
+			   <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> 21 Августа 2021 </li>
+			   <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> 28 Августа 2021 </li>
                         </ul>
                         
                       <hr>
