--- a/page-wine.html
+++ b/page-wine.html
@@ -36,23 +36,6 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
-	<!-- Facebook Pixel Code -->
-	<!--<script>
-	!function(f,b,e,v,n,t,s)
-	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-	n.queue=[];t=b.createElement(e);t.async=!0;
-	t.src=v;s=b.getElementsByTagName(e)[0];
-	s.parentNode.insertBefore(t,s)}(window, document,'script',
-	'https://connect.facebook.net/en_US/fbevents.js');
-	fbq('init', '3921253151274858');
-	fbq('track', 'PageView');
-	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-	/></noscript>-->
-	<!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -113,7 +96,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Март-Май 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Июнь-Август 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
