--- a/packages.html
+++ b/packages.html
@@ -356,7 +356,7 @@
                         </h5>
                         <p class="">Экскурсия и дегустация на винном заводе</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Март-Май 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Июнь-Август 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
