--- a/packages.html
+++ b/packages.html
@@ -517,7 +517,7 @@
                     <h4 class="destination mb-3">Пиво</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="https://novipovorot.pp.ua/images/beer-max.jpg" class="img-fluid" alt="Tik Tok">
+                            <img src="https://novipovorot.pp.ua/images/beer-max.jpg" class="img-fluid" alt="Пиво">
                         </a>
                         <div class="rating">
                             <ul>
@@ -539,7 +539,7 @@
                 <!-- //Пиво  -->
                 
                 <!-- Сырная ферма и Пасека -->
-                <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
+                <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3"> Ферма</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
@@ -569,7 +569,7 @@
                     <h4 class="destination mb-3">Розовое Oзеро</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
-                            <img src="images/pop-Pink-Lake.jpg" class="img-fluid" alt="Tik Tok">
+                            <img src="images/pop-Pink-Lake.jpg" class="img-fluid" alt="Розовое Oзеро">
                         </a>
                         <div class="rating">
                             <ul>
@@ -595,7 +595,7 @@
                     <h4 class="destination mb-3"> Экскурсия </h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
-                            <img src="images/zoo-max.jpg" class="img-fluid" alt="Tik Tok">
+                            <img src="images/zoo-max.jpg" class="img-fluid" alt=" Экскурсия ">
                         </a>
                         <div class="rating">
                             <ul>
