--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 
                 <!-- Розовое озеро  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Розовое Oзеро</h4>
+                    <h4 class="destination mb-3"> Oзеро</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Pink-Lake.html">
                             <img src="images/pop-Pink-Lake.jpg" class="img-fluid" alt="Розовое Oзеро">
