--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -289,9 +289,9 @@
                             <div class="container">
 
                               <div class="card">
-                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Сырная ферма и Пасека #1" data-fancybox="gallery"
-                                    href="/images/Cheese-Farm/cheese-farm-2.jpg">
-                                    <img src="/images/Cheese-Farm/cheese-farm-2.jpg"></a>
+                                <div class="card-image"> <a data-fancybox="gallery" data-caption="Львята и лошадки #1" data-fancybox="gallery"
+                                    href="/images/Lions-and-Horses/gallery-lions-and-horses-1.jpg">
+                                    <img src="/images/Lions-and-Horses/gallery-lions-and-horses-1.jpg"></a>
                                 </div>
                               </div>
 
