--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Львята и Лошадки"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-lions-and-horses.html"/>
-    <meta property="og:image" content="images/----">
+    <meta property="og:image" content="images/Lions-and-Horses/inside-lions-and-horses.jpg">
     <!--End Open Graph data-->
 
    <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
@@ -101,7 +101,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                    <img src="images/     " alt="news image" class="img-fluid">
+                    <img src="images/Lions-and-Horses/inside-lions-and-horses.jpg" alt="news image" class="img-fluid">
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
