--- a/page-zoo.html
+++ b/page-zoo.html
@@ -36,23 +36,6 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
-        <!-- Facebook Pixel Code -->
-       <!-- <script>
-          !function(f,b,e,v,n,t,s)
-          {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-          n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-          if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-          n.queue=[];t=b.createElement(e);t.async=!0;
-          t.src=v;s=b.getElementsByTagName(e)[0];
-          s.parentNode.insertBefore(t,s)}(window, document,'script',
-          'https://connect.facebook.net/en_US/fbevents.js');
-          fbq('init', '3921253151274858');
-          fbq('track', 'PageView');
-        </script>
-        <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-        /></noscript>-->
-        <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -99,13 +82,13 @@
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                      <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                     <li class="breadcrumb-item active" aria-current="page">Экскурсия</li>
+                     <li class="breadcrumb-item active" aria-current="page">Зоопарк-Замок-Oзеро</li>
                    </ol>
                 </nav>
                </div>
               <!-- //Хлебные крошки -->
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Экскурсия</h3>
+                    <h3 class="title">Зоопарк-Замок-Oзеро</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/zoo-max.jpg" alt="news image" class="img-fluid">
