--- a/packages.html
+++ b/packages.html
@@ -280,7 +280,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-zoo.html">Экскурсия</a>
+                            <a href="https://novipovorot.pp.ua/page-zoo.html">Зоопарк-Замок-Oзеро</a>
                         </h5>
                         <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
                         <ul class="listing mt-3">
@@ -592,7 +592,7 @@
                 
                 <!-- Zoo -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3"> Экскурсия </h4>
+                    <h4 class="destination mb-3"> Зоопарк </h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
                             <img src="images/zoo-max.jpg" class="img-fluid" alt=" Экскурсия ">
@@ -609,7 +609,7 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Экскурсия </h4>
+                            <h4> Зоопарк </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
