--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -119,7 +119,11 @@
 				<span id="lions">Львята</span> и <span id="horses">Лошадки</span>
                         </h4>
                         
-			 <p class="p-2 bg-success text-white">Благотворительная Акция - накорми ЛЬВА!</p>
+			 <p class="p-2 bg-success text-white">
+				Благотворительная Акция - накорми ЛЬВА!
+				<img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">
+			 </p>
+			    
                         <p class="txt-alg-jf">
                             За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения,
                             забудете Ваши печали и заботы, проведете время с близкими! Безопасно, комфортно, весело!
