--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -123,9 +123,10 @@
 				Благотворительная Акция - накорми ЛЬВА!
 				<img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">
 			 </p>
-			    
+			   
                         <p class="txt-alg-jf">
-                            За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения,
+                            За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения
+				<img src="./images/Emoticons/smile-moderate.svg" alt="" height="20px">,
                             забудете Ваши печали и заботы, проведете время с близкими! Безопасно, комфортно, весело!
                         </p>
 			<div id="MoreDetails" style="display: none;">
