--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -125,8 +125,7 @@
 			 </p>
 			   
                         <p class="txt-alg-jf">
-                            За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения
-				<img src="./images/Emoticons/smile-moderate.svg" alt="" height="20px">,
+                            За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения,
                             забудете Ваши печали и заботы, проведете время с близкими! Безопасно, комфортно, весело!
                         </p>
 			<div id="MoreDetails" style="display: none;">
