--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -125,7 +125,9 @@
 			       <span id="ExcursionToZaporozhye">Экскурсия в Запорожье.</span>
                         </p>
                         <p class="txt-alg-jf">
-                            Удивительные нубийские козы, миниатрные коровы, самые вкусные сыры <span id="Zaporozhye">Запорожья и области!</span>
+                            Удивительные
+				<img src="/images/Emoji/1f600.png" alt="" height="20px">
+			    нубийские козы, миниатрные коровы, самые вкусные сыры <span id="Zaporozhye">Запорожья и области!</span>
                             Вы такого <span id="tourism">туризма</span> еще не видели и не пробовали! 
                             Сыры с Запорожской душой и поразительными вкусами от любителя до гурмана!
 		            <span id="travels"> Путешествие</span> в котором мы увидим милых козочек, узнаем секреты изготовления твердых и мягких сыров, 
