--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -138,6 +138,7 @@
                              Мы побываем в роли настоящего пасечника примерив
                              на себя защитный костюм, <span id="honeyTasting">а на дегустации попробуем вкуснейший
 				сотовый мед</span> и узнаем истории  пасеки и пчелок!
+				<img src="/images/Emoji/1f606.png" alt="" height="20px">
                          </p>
                          <div id="MoreDetails" style="display: none;">
                          <p class="p-2 bg-warning text-white txt-alg-jf">
