--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -125,9 +125,7 @@
 			       <span id="ExcursionToZaporozhye">Экскурсия в Запорожье.</span>
                         </p>
                         <p class="txt-alg-jf">
-                            Удивительные
-				<img src="/images/Emoji/1f600.png" alt="" height="20px">
-			    нубийские козы, миниатрные коровы, самые вкусные сыры <span id="Zaporozhye">Запорожья и области!</span>
+                            Удивительные нубийские козы, миниатрные коровы, самые вкусные сыры <span id="Zaporozhye">Запорожья и области!</span>
                             Вы такого <span id="tourism">туризма</span> еще не видели и не пробовали! 
                             Сыры с Запорожской душой и поразительными вкусами от любителя до гурмана!
 		            <span id="travels"> Путешествие</span> в котором мы увидим милых козочек, узнаем секреты изготовления твердых и мягких сыров, 
@@ -138,7 +136,7 @@
                              Мы побываем в роли настоящего пасечника примерив
                              на себя защитный костюм, <span id="honeyTasting">а на дегустации попробуем вкуснейший
 				сотовый мед</span> и узнаем истории  пасеки и пчелок!
-				<img src="/images/Emoji/1f606.png" alt="" height="20px">
+				<img src="/images/Emoji/1f600.png" alt="" height="20px">
                          </p>
                          <div id="MoreDetails" style="display: none;">
                          <p class="p-2 bg-warning text-white txt-alg-jf">
